--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -6,6 +6,25 @@ spring:
     name: gateway-service
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          "[/**]": # 모든 경로에 대한 CORS 설정을 시작하겠다.
+            allowed-origins:
+              - "http://localhost:5173"
+              - "http://playdata-orderservice0706.s3-website.ap-northeast-2.amazonaws.com"
+            allowed-methods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - PATCH
+              - OPTIONS
+            allowed-headers:
+              - Content-Type
+              - Authorization
+              - X-Requested-With # AJAX 요청임을 표시 (우리가 세팅하는 건 아님)
+            allow-credentials: true # 인증 정보 포함 요청을 허용하겠다.
+
       default-filters:
         - name: GlobalFilter
           args:
@@ -18,6 +37,7 @@ spring:
           predicates:
             - Path=/user-service/user/doLogin
             - Method=POST
+            - Method=OPTIONS
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
