--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -1,5 +1,20 @@
-#jenkins secret credential 사용하기 - 2
+server:
+  port: 8888
 
 spring:
-  profiles:
-    active: dev
+  application:
+    name: config-service
+  cloud:
+    config:
+      server:
+        git:
+          uri: ${GITHUB_URL}
+          default-label: main
+          username: ${USERNAME}
+          password: ${TOKEN}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, refresh, beans
