--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: gateway-service
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin123
   cloud:
     gateway:
       globalcors:
