--- a/ordering-service/src/main/resources/application.yml
+++ b/ordering-service/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: ordering-service
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin123
 
 
 #  서킷 브레이커 (Circuit Breaker)
@@ -46,7 +51,7 @@ resilience4j:
   timelimiter:
     configs:
       default:
-        timeout-duration: 2s # 요청이 몇 초 안에 완료되어야 하는지
+        timeout-duration: 4s # 요청이 몇 초 안에 완료되어야 하는지
         cancel-running-future: true # 실행중인 작업 취소 여부, true 주면 타임아웃 발생 시 작업 강제 취소
     instances:
       userService:
